fixed uneven font sizes

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -12,7 +12,7 @@
 		padding: 30px 0 0 0;
 		border: 1px solid #eee;
 		margin: 30px 0;
-		font-size: .8em;
+		font-size: $name;
 
 		.square-image {
 			width: 125px;
@@ -30,7 +30,7 @@
 			color: #000;
 			text-decoration: none;
 			font-weight: normal;
-			font-size: 1.3em;
+			font-size: $h3;
 		}
 	}
 
@@ -39,7 +39,7 @@
 	}
 
 	.blog-navigation {
-		font-size: 14px;
+		font-size: 20px;
 		display: block;
 		width: auto;
 		overflow: hidden;
