--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -24,31 +24,51 @@ img {
 	width: 100%;
 }
 
-h1 strong, h2 strong {
+h1 strong, h2 strong, h3 strong {
 	font-weight: 700;
 }
 
 h1 {
 	font-weight: 300;
-	font-size: 2.3em;
+	font-size: $h1;
 	margin: 0;
 }
 
 h2 {
 	font-weight: 300;
-	font-size: 2.2em;
+	font-size: $h2;
 	margin: 0 0 30px 0;
 }
 
 h3 {
 	margin: 20px 0 10px 0;
+	font-weight: 300;
+	font-size: $h3;
 }
 
+h4 {
+	font-size: $h4;
+	margin: 20px 0 10px 0;
+}
 
-p, address {
-	font-size: 1.38em;
+p{
 	color: #666;
 	margin-bottom: 20px;
 	font-weight: 300;
 	line-height: 1.4em;
+	font-size: $p;
+}
+
+li{
+	color: #666;
+	line-height: 1.4em;
+	font-weight: 300;
+}
+
+address {
+	color: #666;
+	margin-bottom: 20px;
+	font-weight: 300;
+	line-height: 1.4em;
+	font-size: 1.38em;
 }
