--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -100,7 +100,7 @@ blockquote {
 		display: block;
 		font-weight: bold;
 		margin: 10px 0 0 0;
-		font-size: .85em;
+		font-size: 1em;
 		font-style: normal;
 	}
 
