--- a/_sass/pricing.scss
+++ b/_sass/pricing.scss
@@ -14,7 +14,7 @@
 		width: 100%;
 
 		.highlighted {
-			font-size: 1.2em
+			font-size: $name
 		}
 
 		.pricing-cta {
