--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -22,7 +22,7 @@
 	.product-image {
 		width: 130px;
 		height: 100px;
-		font-size: 1.2em;
+		font-size: $pname;
 		margin-top: 10px;
 			img {
 				width: 100px;
@@ -41,13 +41,13 @@
 		}
 
 	.pname {
-			font-size: 1.5em;
+			font-size: $pname;
 			margin-top: 5px;
 		}
 
 
 	.name {
-		font-size: 1.3em;
+		font-size: $name;
 		margin-top: 20px;
 	}
 
