--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -52,13 +52,13 @@
 		}
 
 	.pname {
-			font-size: 1.5em;
+			font-size: $pname;
 			margin-top: 30px;
 		}
 
 
 	.name {
-		font-size: 1.3em;
+		font-size: $name;
 		margin-top: 20px;
 	}
 
