--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,3 +8,17 @@ $tablet: "(min-width: 450px)";
 $mobile: "(min-width: 300px)";
 $mid-point: "(min-width: 910px)";
 $desktop: "(min-width: 911px)";
+
+//font sizes
+
+$h1: 2.2em;
+$h2: 1.9em;
+$h3: 1.3em;
+$h4: 1.2em;
+
+$p: 1.2em;
+$address: 1.38em;
+
+$pname: 1.38em;
+$name: 1.2em;
+$fontcolor: #666;
